[metadata]
name = expect
version = 0.0.1
author = Michael Garbutt
author_email = michael.c.garbutt@gmail.com
description = Clean handling of Optional return values
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MichaelCG8/expect
project_urls =
    Bug Tracker = https://github.com/MichaelCG8/expect/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

